@@ -427,6 +427,7 @@ typedef struct rcoption {
 #define NANO_ALT_EQUALS '='
 #define NANO_ALT_RCARET '>'
 #define NANO_ALT_QUESTION '?'
+#define NANO_ALT_LBRACKET '['
 #define NANO_ALT_BACKSLASH '\\'
 #define NANO_ALT_RBRACKET ']'
 #define NANO_ALT_CARET '^'
@@ -457,6 +458,7 @@ typedef struct rcoption {
 #define NANO_ALT_X 'x'
 #define NANO_ALT_Y 'y'
 #define NANO_ALT_Z 'z'
+#define NANO_ALT_LCURLYBRACKET '{'
 #define NANO_ALT_PIPE '|'
 #define NANO_ALT_RCURLYBRACKET '}'
 
@@ -540,6 +542,10 @@ typedef struct rcoption {
 #define NANO_DELETE_KEY			NANO_CONTROL_D
 #define NANO_BACKSPACE_KEY		NANO_CONTROL_H
 #define NANO_TAB_KEY			NANO_CONTROL_I
+#define NANO_INDENTMARKED_KEY		NANO_ALT_LBRACKET
+#define NANO_INDENTMARKED_ALTKEY	NANO_ALT_LCURLYBRACKET
+#define NANO_UNINDENTMARKED_KEY		NANO_ALT_RBRACKET
+#define NANO_UNINDENTMARKED_ALTKEY	NANO_ALT_RCURLYBRACKET
 #define NANO_SUSPEND_KEY		NANO_CONTROL_Z
 #define NANO_ENTER_KEY			NANO_CONTROL_M
 #define NANO_TOFILES_KEY		NANO_CONTROL_T
@@ -549,8 +555,7 @@ typedef struct rcoption {
 #define NANO_NEXTFILE_KEY		NANO_ALT_RCARET
 #define NANO_PREVFILE_ALTKEY		NANO_ALT_COMMA
 #define NANO_NEXTFILE_ALTKEY		NANO_ALT_PERIOD
-#define NANO_BRACKET_KEY		NANO_ALT_RBRACKET
-#define NANO_BRACKET_ALTKEY		NANO_ALT_RCURLYBRACKET
+#define NANO_BRACKET_KEY		NANO_CONTROL_5
 #define NANO_NEXTWORD_KEY		NANO_CONTROL_SPACE
 #define NANO_PREVWORD_KEY		NANO_ALT_SPACE
 #define NANO_WORDCOUNT_KEY		NANO_ALT_D
